Closed Bug 432066 Opened 18 years ago Closed 18 years ago

Solaris build is broken after the checkin of bug 431754

Categories

(Toolkit :: Safe Browsing, defect)

x86
SunOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Firefox 3

People

(Reporter: alfred.peng, Assigned: alfred.peng)

References

Details

(Keywords: regression)

Attachments

(1 file)

Attached patch patch v1Splinter Review
Attachment #319223 - Flags: review?(tony)
Assignee: nobody → alfred.peng
Component: General → Phishing Protection
QA Contact: general → phishing.protection
Status: NEW → ASSIGNED
Flags: blocking-firefox3?
Target Milestone: --- → Firefox 3
Blocks: 431754
Keywords: regression
We shouldn't break Solaris - fix seems simple enough. Tony, if you have a moment this weekend, can you please review?
Flags: blocking-firefox3? → blocking-firefox3+
Whiteboard: [has patch][needs review tony]
Comment on attachment 319223 [details] [diff] [review] patch v1 Looks fine, but I don't know enough about the solaris build to understand why it broke or why this fixes it.
Attachment #319223 - Flags: review?(tony) → review+
Attachment #319223 - Flags: approval1.9?
Attachment #319223 - Flags: approval1.9? → approval1.9+
Whiteboard: [has patch][needs review tony] → [has patch][has review][has approval]
mozilla/toolkit/components/url-classifier/src/nsUrlClassifierStreamUpdater.cpp 1.23
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [has patch][has review][has approval]
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: