Bug 432066: fix solaris bustage from bug 431754, patch by Alfred Peng <alfred.peng@sun.com>, r=tony, a=mconnor